# LLMs-From-Scratch

./: .gitignore  README.md  pyproject.toml
Chapter2/: 02-tokenizing-test.ipynb  byte-pair-encoding.ipynb  data_utils.py  download_the_verdict.py  simple_text_tokenizer.py
Chapter3/: 03-coding-attention.ipynb  multihead_attention.py
Chapter4/: 04-implementing-a-gpt-model.ipynb  generate_text_simple.py  gpt_model.py
Chapter5/: 05-pretraining-on-unlabeled-data.ipynb  appendix-d-improving-the-training-loop.ipynb  eval_utils.py  load_weights_for_gpt.py  loss_utils.py  plot_utils.py  tokenize_utils.py
Chapter6/: 06-finetuning-for-classification.ipynb  calc_accuracy_loader.py  dataset.py  train_utils.py
Chapter7/: 07-fine-tuning-to-follow-instructions.ipynb  appendix-e-parameter-efficient-fine-tuning.ipynb
