[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # "jupyterlab>=4.3.6",
    # "jupyterlab-mathjax3>=4.3.0",
    # "matplotlib>=3.10.1",
    # "numpy>=2.2.4",
    # "tiktoken>=0.9.0",
    # "torch>=2.6.0",
    # "tqdm>=4.67.1",
    "jupyterlab>=4.4.0",
    "jupyterlab-mathjax3>=4.3.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26.0,<2.1.0",
    "tensorflow>=2.15.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = [] # This tells setuptools not to auto-discover packages
